test/fortio/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
spec:
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: docker.io/fortio/fortio:1.53.0
        args:
        - server
        - --https-insecure
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /var/lib/fortio
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 1000Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
spec:
  selector:
    app: fortio
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: data
spec:
  storageClassName: fast
  accessModes:
  - ReadWriteMany
  resources:
    requests:
      storage: 100Mi
