test/fortio/fortio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
spec:
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: docker.io/fortio/fortio:1.53.0
        args:
        - server
        - --https-insecure
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /var/lib/fortio
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 1000Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
spec:
  selector:
    app: fortio
  ports:
  - name: http
    port: 80
    targetPort: http
