test/fortio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: fortio
spec:
  selector:
    app: fortio
  ports:
  - name: fortio
    protocol: TCP
    port: 80
    targetPort: 8080
